LibNoDaveConnectionLibrary/Communication/LibNoDave/libnodave.net.cs


#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveForceDisconnectIBH")]
#else
            [DllImport("__Internal", EntryPoint = "daveForceDisconnectIBH")]
#endif
            protected static extern int daveForceDisconnectIBH32(IntPtr dc, int src, int dest, int MPI);
            public int forceDisconnectIBH(int src, int dest, int MPI)
            {
                if (IntPtr.Size == 8)
                    return daveForceDisconnectIBH64(pointer, src, dest, MPI);
                else
                    return daveForceDisconnectIBH32(pointer, src, dest, MPI);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveResetIBH")]
#else
            [DllImport("__Internal", EntryPoint = "daveResetIBH")]
#endif
            protected static extern int daveResetIBH64(IntPtr dc);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveResetIBH")]
#else
            [DllImport("__Internal", EntryPoint = "daveResetIBH")]
#endif
            protected static extern int daveResetIBH32(IntPtr dc);

            public int resetIBH()
            {
                if (IntPtr.Size == 8)
                    return daveResetIBH64(pointer);
                else
                    return daveResetIBH32(pointer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveGetResponse")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetResponse")]
#endif
            protected static extern int daveGetResponse64(IntPtr dc);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveGetResponse")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetResponse")]
#endif
            protected static extern int daveGetResponse32(IntPtr dc);
            public int getGetResponse()
            {
                if (IntPtr.Size == 8)
                    return daveGetResponse64(pointer);
                else
                    return daveGetResponse32(pointer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveSendMessage")]
#else
            [DllImport("__Internal", EntryPoint = "daveSendMessage")]
#endif
            protected static extern int daveSendMessage64(IntPtr dc, IntPtr p);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveSendMessage")]
#else
            [DllImport("__Internal", EntryPoint = "daveSendMessage")]
#endif
            protected static extern int daveSendMessage32(IntPtr dc, IntPtr p);
            public int getMessage(PDU p)
            {
                if (IntPtr.Size == 8)
                    return daveSendMessage64(pointer, p.pointer);
                else
                    return daveSendMessage32(pointer, p.pointer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveGetProgramBlock")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetProgramBlock")]
#endif
            protected static extern int daveGetProgramBlock64(IntPtr dc, int blockType, int number, byte[] buffer, ref int length);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveGetProgramBlock")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetProgramBlock")]
#endif
            protected static extern int daveGetProgramBlock32(IntPtr dc, int blockType, int number, byte[] buffer, ref int length);
            public int getProgramBlock(int blockType, int number, byte[] buffer, ref int length)
            {
                if (IntPtr.Size == 8)
                    return daveGetProgramBlock64(pointer, blockType, number, buffer, ref length);
                else
                    return daveGetProgramBlock32(pointer, blockType, number, buffer, ref length);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "davePutProgramBlock")]
#else
            [DllImport("__Internal", EntryPoint = "davePutProgramBlock")]
#endif
            protected static extern int davePutProgramBlock64(IntPtr dc, int blockType, int number, byte[] buffer, ref int length);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "davePutProgramBlock")]
#else
            [DllImport("__Internal", EntryPoint = "davePutProgramBlock")]
#endif
            protected static extern int davePutProgramBlock32(IntPtr dc, int blockType, int number, byte[] buffer, ref int length);
            public int putProgramBlock(int blockType, int number, byte[] buffer, ref int length)
            {
                if (IntPtr.Size == 8)
                    return davePutProgramBlock64(pointer, blockType, number, buffer, ref length);
                else
                    return davePutProgramBlock32(pointer, blockType, number, buffer, ref length);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveDeleteProgramBlock")]
#else
            [DllImport("__Internal", EntryPoint = "daveDeleteProgramBlock")]
#endif
            protected static extern int daveDeleteProgramBlock64(IntPtr dc, int blockType, int number);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveDeleteProgramBlock")]
#else
            [DllImport("__Internal", EntryPoint = "daveDeleteProgramBlock")]
#endif
            protected static extern int daveDeleteProgramBlock32(IntPtr dc, int blockType, int number);
            public int deleteProgramBlock(int blockType, int number)
            {
                if (IntPtr.Size == 8)
                    return daveDeleteProgramBlock64(pointer, blockType, number);
                else
                    return daveDeleteProgramBlock32(pointer, blockType, number);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveListBlocksOfType")]
#else
            [DllImport("__Internal", EntryPoint = "daveListBlocksOfType")]
#endif
            protected static extern int daveListBlocksOfType64(IntPtr dc, int blockType, byte[] buffer);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveListBlocksOfType")]
#else
            [DllImport("__Internal", EntryPoint = "daveListBlocksOfType")]
#endif
            protected static extern int daveListBlocksOfType32(IntPtr dc, int blockType, byte[] buffer);
            public int ListBlocksOfType(int blockType, byte[] buffer)
            {
                if (IntPtr.Size == 8)
                    return daveListBlocksOfType64(pointer, blockType, buffer);
                else
                    return daveListBlocksOfType32(pointer, blockType, buffer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveSetPLCTime")]
#else
            [DllImport("__Internal", EntryPoint = "daveSetPLCTime")]
#endif
            protected static extern int daveSetPLCTime64(IntPtr dc, byte[] buffer);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveSetPLCTime")]
#else
            [DllImport("__Internal", EntryPoint = "daveSetPLCTime")]
#endif
            protected static extern int daveSetPLCTime32(IntPtr dc, byte[] buffer);

            public int daveSetPLCTime(DateTime tm)
            {
                byte[] buffer = new byte[] { 0x00, 0x19, 0x05, 0x08, 0x23, 0x04, 0x10, 0x23, 0x67, 0x83, };
                putBCD8at(buffer, 2, tm.Year % 100);
                putBCD8at(buffer, 3, tm.Month);
                putBCD8at(buffer, 4, tm.Day);
                putBCD8at(buffer, 5, tm.Hour);
                putBCD8at(buffer, 6, tm.Minute);
                putBCD8at(buffer, 7, tm.Second);
                putBCD8at(buffer, 8, tm.Millisecond / 10);
                putBCD8at(buffer, 9, (tm.Millisecond % 10) << 4);

                if (IntPtr.Size == 8)
                    return daveSetPLCTime64(pointer, buffer);
                else
                    return daveSetPLCTime32(pointer, buffer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveReadPLCTime")]
#else
            [DllImport("__Internal", EntryPoint = "daveReadPLCTime")]
#endif
            protected static extern int daveReadPLCTime64(IntPtr dc);

#if !IPHONE
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveReadPLCTime")]
#else
            [DllImport("__Internal", EntryPoint = "daveReadPLCTime")]
#endif
            protected static extern int daveReadPLCTime32(IntPtr dc);
            public DateTime daveReadPLCTime()
            {
                int res = 0;
                if (IntPtr.Size == 8)
                    res = daveReadPLCTime64(pointer);
                else
                    res = daveReadPLCTime32(pointer);

                int year, month, day, hour, minute, second, millisecond;
                getU8();
                getU8();
                byte[] tmp = new byte[1];
                tmp[0] = Convert.ToByte(getU8());
                year = getBCD8from(tmp, 0);
                year += year >= 90 ? 1900 : 2000;
                tmp[0] = Convert.ToByte(getU8());
                month = getBCD8from(tmp, 0);
                tmp[0] = Convert.ToByte(getU8());
                day = getBCD8from(tmp, 0);
                tmp[0] = Convert.ToByte(getU8());
                hour = getBCD8from(tmp, 0);
                tmp[0] = Convert.ToByte(getU8());
                minute = getBCD8from(tmp, 0);
                tmp[0] = Convert.ToByte(getU8());
                second = getBCD8from(tmp, 0);
                tmp[0] = Convert.ToByte(getU8());
                millisecond = getBCD8from(tmp, 0) * 10;
                tmp[0] = Convert.ToByte(getU8());
                tmp[0] = Convert.ToByte(tmp[0] >> 4);
                millisecond += getBCD8from(tmp, 0);
                DateTime ret = new DateTime(year, month, day, hour, minute, second, millisecond);

                return ret;
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveGetPDUData")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetPDUData")]
#endif
            protected static extern int daveGetPDUData64(IntPtr dc, IntPtr p, byte[] data, ref int ldata, byte[] param, ref int lparam);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveGetPDUData")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetPDUData")]
#endif
            protected static extern int daveGetPDUData32(IntPtr dc, IntPtr p, byte[] data, ref int ldata, byte[] param, ref int lparam);

            public int daveGetPDUData(PDU myPDU, out byte[] data, out byte[] param)
            {
                byte[] tmp1 = new byte[65536];
                byte[] tmp2 = new byte[65536];
                int ltmp1 = 0;
                int ltmp2 = 0;
                int res = 0;
                if (IntPtr.Size == 8)
                    res = daveGetPDUData64(pointer, myPDU.pointer, tmp1, ref ltmp1, tmp2, ref ltmp2);
                else
                    res = daveGetPDUData32(pointer, myPDU.pointer, tmp1, ref ltmp1, tmp2, ref ltmp2);
                data = new byte[ltmp1];
                param = new byte[ltmp2];
                Array.Copy(tmp1, data, ltmp1);
                Array.Copy(tmp2, param, ltmp2);
                return res;
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "_daveSetupReceivedPDU")]
#else
            [DllImport("__Internal", EntryPoint = "_daveSetupReceivedPDU")]
#endif
            private static extern int _daveSetupReceivedPDU64(IntPtr dc, IntPtr p);
